Hands-on lab/Scripts/template.json
{
  "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "adminUsername": {
	  "defaultValue" : "wsadmin",
      "type": "string"
    },
    "adminPassword": {
	  "defaultValue" : "p@ssword1rocks",
      "type": "securestring"
    },
    "sqlservername": {
      "type": "string"
    },
    "databaseName": {
      "defaultValue": "SampleDB",
      "type": "string"
    },
    "userObjectId": {
      "type": "string"
    },
    "vmSize": {
      "defaultValue": "Standard_E2s_v3",
      "type": "string"
    },
    "region": {
      "defaultValue": "East US 2",
      "type": "string",
      "allowedValues": [
        "Australia Southeast",
        "Canada Central",
        "Central India",
        "East US 2",
        "Japan East",
        "South Central US",
        "Southeast Asia",
        "UK South",
        "West Cental US",
        "West Europe",
        "West US 2"
      ]
    }
  },
  "variables": {
    "virtualMachineName": "dsvm-vm",
    "virtualMachineSize": "Standard_D2_v2",
    "virtualNetworkName": "dsvm-vnet",
    "DSVM-networkInterfaceName": "dsvm-nic",
    "networkSecurityGroupName": "dsvm-nsg",
    "addressPrefix": "10.1.0.0/24",
    "subnetName": "dsvm-subnet",
    "subnetPrefix": "10.1.0.0/24",
    "publicIpAddressName": "dsvm-ip",
    "dsvmdnsName": "[concat('dsvm',uniqueString(resourceGroup().id))]",
    "publicIpAddressType": "Dynamic",
    "diagStorageAccountName": "[concat('diagstor', uniqueString(resourceGroup().id))]",
    "automationMap" : {
      "Australia Southeast" : { "region": "Australia Southeast"},
      "Canada Central" : { "region": "Canada Central"},
      "Central India" : { "region": "Central India"},
      "East US" : { "region": "East US"},
      "East US 2" : { "region": "East US"},
      "Japan East" : { "region": "Japan East"},
      "South Central US" : { "region": "South Central US"},
      "Southeast Asia" : { "region": "Southeast Asia"},
      "UK South" : { "region": "UK South"},
      "West Cental US" : { "region": "West Cental US 2"},
      "West Cental US 2" : { "region": "West Cental US 2"},
      "West Europe" : { "region": "West Europe"},
      "West US 2" : { "region": "West US 2"}
    }
  },
  "resources": [
    {
      "type": "Microsoft.Automation/automationAccounts",
      "apiVersion": "2015-10-31",
      "name": "[concat('azseclog', uniqueString(resourceGroup().id))]",
      "location": "[parameters('region')]",
      "properties": {
          "sku": {
              "name": "Basic"
          }
      }
  },
    {
      "type": "microsoft.operationalinsights/workspaces",
      "name": "[concat('azseclog', uniqueString(resourceGroup().id))]",
      "apiVersion": "2020-03-01-preview",
      "location": "[variables('automationMap')[parameters('region')].region]",
      "scale": null,
      "properties": {
          "sku": {
              "name": "Standalone"
          },
          "retentionInDays": 31,
          "publicNetworkAccessForIngestion": "Enabled",
          "publicNetworkAccessForQuery": "Enabled"
      },
      "dependsOn": []
},
    {
      "name": "[variables('virtualMachineName')]",
      "type": "Microsoft.Compute/virtualMachines",
      "apiVersion": "2016-04-30-preview",
      "location": "[parameters('region')]",
      "dependsOn": [
        "[concat('Microsoft.Network/networkInterfaces/', variables('DSVM-networkInterfaceName'))]"
      ],
      "properties": {
        "osProfile": {
          "computerName": "[variables('virtualMachineName')]",
          "adminUsername": "[parameters('adminUsername')]",
          "adminPassword": "[parameters('adminPassword')]",
          "windowsConfiguration": {
            "provisionVmAgent": "true"
          }
        },
        "hardwareProfile": {
          "vmSize": "[parameters('vmSize')]"
        },
        "storageProfile": {
          "imageReference": {
            "publisher": "microsoft-ads",
            "offer": "windows-data-science-vm",
            "sku": "windows2016byol",
            "version": "latest"
          },
          "osDisk": {
            "createOption": "FromImage",
            "managedDisk": {
              "storageAccountType": "Standard_LRS"
            }
          },
          "dataDisks": [ ]
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('DSVM-networkInterfaceName'))]"
            }
          ]
        }
      },
      "plan": {
        "name": "windows2016byol",
        "publisher": "microsoft-ads",
        "product": "windows-data-science-vm"
      }
    },
    {
      "name": "[variables('virtualNetworkName')]",
      "type": "Microsoft.Network/virtualNetworks",
      "apiVersion": "2017-08-01",
      "location": "[parameters('region')]",
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "[variables('addressPrefix')]"
          ]
        },
        "subnets": [
          {
            "name": "[variables('subnetName')]",
            "properties": {
              "addressPrefix": "[variables('subnetPrefix')]"
            }
          }
        ]
      }
    },
    {
      "name": "[variables('DSVM-networkInterfaceName')]",
      "type": "Microsoft.Network/networkInterfaces",
      "apiVersion": "2016-09-01",
      "location": "[parameters('region')]",
      "dependsOn": [
        "[concat('Microsoft.Network/virtualNetworks/', variables('virtualNetworkName'))]",
        "[concat('Microsoft.Network/publicIpAddresses/', variables('publicIpAddressName'))]",
        "[concat('Microsoft.Network/networkSecurityGroups/', variables('networkSecurityGroupName'))]"
      ],
      "properties": {
        "ipConfigurations": [
          {
            "name": "ipconfig1",
            "properties": {
              "subnet": {
                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets/', variables('virtualNetworkName'), variables('subnetName'))]"
              },
              "privateIPAllocationMethod": "Dynamic",
              "publicIpAddress": {
                "id": "[resourceId('Microsoft.Network/publicIpAddresses', variables('publicIpAddressName'))]"
              }
            }
          }
        ],
        "networkSecurityGroup": {
          "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroupName'))]"
        }
      }
    },
    {
      "name": "[variables('publicIpAddressName')]",
      "type": "Microsoft.Network/publicIpAddresses",
      "apiVersion": "2017-08-01",
      "location": "[parameters('region')]",
      "properties": {
        "publicIpAllocationMethod": "[variables('publicIpAddressType')]",
        "dnsSettings": {
          "domainNameLabel": "[variables('dsvmdnsName')]"
        }
      },
      "sku": {
        "name": "Basic"
      }
    },
    {
      "name": "[variables('networkSecurityGroupName')]",
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2017-06-01",
      "location": "[parameters('region')]",
      "properties": {
        "securityRules": [
          {
            "name": "Jupyter",
            "properties": {
              "priority": 1010,
              "protocol": "TCP",
              "access": "Allow",
              "direction": "Inbound",
              "sourceAddressPrefix": "*",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*",
              "destinationPortRange": "9999"
            }
          },
          {
            "name": "MSSQL",
            "properties": {
              "priority": 1020,
              "protocol": "TCP",
              "access": "Allow",
              "direction": "Inbound",
              "sourceAddressPrefix": "*",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*",
              "destinationPortRange": "1433"
            }
          },
          {
            "name": "default-allow-rdp",
            "properties": {
              "priority": 1030,
              "protocol": "TCP",
              "access": "Allow",
              "direction": "Inbound",
              "sourceAddressPrefix": "*",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*",
              "destinationPortRange": "3389"
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Storage/storageAccounts",
      "sku": {
        "name": "Standard_LRS"
      },
      "kind": "Storage",
      "name": "[variables('diagStorageAccountName')]",
      "apiVersion": "2017-10-01",
      "location": "[parameters('region')]",
      "properties": {
        "supportsHttpsTrafficOnly": "false",
        "encryption": {
          "services": {
            "blob": {
              "enabled": true
            },
            "file": {
              "enabled": true
            }
          },
          "keySource": "Microsoft.Storage"
        }
      },
      "dependsOn": [ ]
    },
    {
      "type": "Microsoft.Network/virtualNetworks",
      "name": "dbVnet",
      "apiVersion": "2017-08-01",
      "location": "[parameters('region')]",
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "10.1.0.0/24"
          ]
        },
        "subnets": [
          {
            "name": "default",
            "properties": {
              "addressPrefix": "10.1.0.0/24",
              "networkSecurityGroup": null
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/virtualNetworks",
      "name": "mainVNet",
      "apiVersion": "2017-08-01",
      "location": "[parameters('region')]",
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "10.0.0.0/16"
          ]
        },
        "subnets": [
          {
            "name": "default",
            "properties": {
              "addressPrefix": "10.0.0.0/24"
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/virtualNetworks",
      "name": "webVNet",
      "apiVersion": "2017-08-01",
      "location": "[parameters('region')]",
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "10.2.0.0/16"
          ]
        },
        "subnets": [
          {
            "name": "default",
            "properties": {
              "addressPrefix": "10.2.0.0/24"
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/virtualNetworks/virtualNetworkPeerings",
      "name": "[concat('mainVNet', '/', 'main_to_db')]",
      "apiVersion": "2017-06-01",
      "properties": {
        "remoteVirtualNetwork": {
          "id": "[resourceId('Microsoft.Network/virtualNetworks', 'dbVnet')]"
        },
        "allowVirtualNetworkAccess": true,
        "allowForwardedTraffic": true,
        "allowGatewayTransit": true,
        "useRemoteGateways": false
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/virtualNetworks', 'mainVNet')]",
        "[resourceId('Microsoft.Network/virtualNetworks', 'dbVnet')]"
      ]
    },
    {
      "type": "Microsoft.Network/virtualNetworks/virtualNetworkPeerings",
      "name": "[concat('dbVnet', '/', 'db_to_main')]",
      "apiVersion": "2017-06-01",
      "properties": {
        "remoteVirtualNetwork": {
          "id": "[resourceId('Microsoft.Network/virtualNetworks', 'mainVNet')]"
        },
        "allowVirtualNetworkAccess": true,
        "allowForwardedTraffic": true,
        "allowGatewayTransit": true,
        "useRemoteGateways": false
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/virtualNetworks', 'mainVNet')]",
        "[resourceId('Microsoft.Network/virtualNetworks', 'dbVnet')]"
      ]
    },
    {
      "type": "Microsoft.Network/virtualNetworks/virtualNetworkPeerings",
      "name": "[concat('mainVNet', '/', 'main_to_web')]",
      "apiVersion": "2017-06-01",
      "properties": {
        "remoteVirtualNetwork": {
          "id": "[resourceId('Microsoft.Network/virtualNetworks', 'webVNet')]"
        },
        "allowVirtualNetworkAccess": true,
        "allowForwardedTraffic": true,
        "allowGatewayTransit": true,
        "useRemoteGateways": false
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/virtualNetworks', 'mainVNet')]",
        "[resourceId('Microsoft.Network/virtualNetworks', 'webVNet')]"
      ]
    },
    {
      "type": "Microsoft.Network/virtualNetworks/virtualNetworkPeerings",
      "name": "[concat('webVNet', '/', 'web_to_main')]",
      "apiVersion": "2017-06-01",
      "properties": {
        "remoteVirtualNetwork": {
          "id": "[resourceId('Microsoft.Network/virtualNetworks', 'mainVNet')]"
        },
        "allowVirtualNetworkAccess": true,
        "allowForwardedTraffic": true,
        "allowGatewayTransit": true,
        "useRemoteGateways": false
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/virtualNetworks', 'mainVNet')]",
        "[resourceId('Microsoft.Network/virtualNetworks', 'webVNet')]"
      ]
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "DbTrafficOnly",
      "apiVersion": "2017-06-01",
      "location": "[parameters('region')]",
      "properties": {
        "securityRules": [
			{
				"name": "DenyAll",				
				"properties": {
					"provisioningState": "Succeeded",
					"protocol": "*",
					"sourcePortRange": "*",
					"destinationPortRange": "*",
					"sourceAddressPrefix": "*",
					"destinationAddressPrefix": "*",
					"access": "Deny",
					"priority": 1000,
					"direction": "Inbound",
					"sourcePortRanges": [],
					"destinationPortRanges": [],
					"sourceAddressPrefixes": [],
					"destinationAddressPrefixes": []
				}
			}
		]
      },
      "dependsOn": [ ]
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "paw-1-nsg",
      "apiVersion": "2017-06-01",
      "location": "[parameters('region')]",
      "properties": {
        "securityRules": [ ]
      },
      "dependsOn": [ ]
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "WebTrafficOnly",
      "apiVersion": "2017-06-01",
      "location": "[parameters('region')]",
      "properties": {
        "securityRules": [
			{
				"name": "DenyAll",				
				"properties": {
					"provisioningState": "Succeeded",
					"protocol": "*",
					"sourcePortRange": "*",
					"destinationPortRange": "*",
					"sourceAddressPrefix": "*",
					"destinationAddressPrefix": "*",
					"access": "Deny",
					"priority": 1000,
					"direction": "Inbound",
					"sourcePortRanges": [],
					"destinationPortRanges": [],
					"sourceAddressPrefixes": [],
					"destinationAddressPrefixes": []
				}
			}
		]
      },
      "dependsOn": [ ]
    },
    {
      "type": "Microsoft.Sql/servers",
      "name": "[parameters('sqlservername')]",
      "apiVersion": "2015-05-01-preview",
      "location": "[parameters('region')]",
      "properties": {
        "administratorLogin": "[parameters('adminUsername')]",
        "administratorLoginPassword": "[parameters('adminPassword')]",
        "version": "12.0"
      },
      "resources": [
        {
          "type": "databases",
          "name": "[parameters('databaseName')]",
          "apiVersion": "2014-04-01-preview",
          "location": "[parameters('region')]",
          "properties": {
            "collation": "SQL_Latin1_General_CP1_CI_AS",
            "edition": "Standard",
            "maxSizeBytes": "268435456000",
            "zoneRedundant": "false"
          },
          "dependsOn": [
            "[concat('Microsoft.Sql/servers/', parameters('sqlservername'))]"
          ]
        },
        {
          "type": "firewallrules",
          "name": "AllowAllWindowsAzureIps",
          "apiVersion": "2014-04-01-preview",
          "location": "[parameters('region')]",
          "properties": {
            "endIpAddress": "0.0.0.0",
            "startIpAddress": "0.0.0.0"
          },
          "dependsOn": [
            "[concat('Microsoft.Sql/servers/', parameters('sqlservername'))]"
          ]
        }
      ]
    },
    {
      "type": "Microsoft.Compute/virtualMachines",
      "apiVersion": "2019-07-01",
      "name": "linux-1",
      "location": "[parameters('region')]",
      "dependsOn": [
        "[concat('Microsoft.Network/networkInterfaces/', 'linux-1-nic')]",
        "[concat('Microsoft.Storage/storageAccounts/', variables('diagStorageAccountName'))]"
      ],
      "properties": {
          "hardwareProfile": {
              "vmSize": "Standard_DS1_v2"
          },
          "storageProfile": {
              "imageReference": {
                  "publisher": "Canonical",
                  "offer": "UbuntuServer",
                  "sku": "18.04-LTS",
                  "version": "latest"
              },
              "osDisk": {
                  "osType": "Linux",
                  "name": "linux-1-os",
                  "createOption": "FromImage",
                  "caching": "ReadWrite",
                  "managedDisk": {
                      "storageAccountType": "Premium_LRS"
                  },
                  "diskSizeGB": 30
              },
              "dataDisks": []
          },
          "osProfile": {
              "computerName": "linux-1",
              "adminUsername": "[parameters('adminUsername')]",
              "adminPassword": "[parameters('adminPassword')]",
              "linuxConfiguration": {
                  "disablePasswordAuthentication": false,
                  "provisionVMAgent": true
              },
              "secrets": [],
              "allowExtensionOperations": true
          },
          "networkProfile": {
              "networkInterfaces": [
                  {
                      "id": "[resourceId('Microsoft.Network/networkInterfaces', 'linux-1-nic')]"
                  }
              ]
          },
          "diagnosticsProfile": {
              "bootDiagnostics": {
                  "enabled": true,
                  "storageUri": "[reference(resourceId(resourceGroup().name, 'Microsoft.Storage/storageAccounts', variables('diagStorageAccountName')), '2015-06-15').primaryEndpoints['blob']]"
              }
          }
      }
  },
  {
    "name": "linux-1-nic",
    "type": "Microsoft.Network/networkInterfaces",
    "apiVersion": "2016-09-01",
    "location": "[parameters('region')]",
    "dependsOn": [
      "[concat('Microsoft.Network/virtualNetworks/', 'mainVNet')]",
      "[concat('Microsoft.Network/networkSecurityGroups/', 'paw-1-nsg')]"
    ],
    "properties": {
      "ipConfigurations": [
        {
          "name": "ipconfig1",
          "properties": {
            "subnet": {
              "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', 'mainVNet', 'default')]"
            },
            "privateIPAllocationMethod": "Dynamic"
          }
        }
      ],
      "networkSecurityGroup": {
        "id": "[resourceId(resourceGroup().name, 'Microsoft.Network/networkSecurityGroups', 'paw-1-nsg')]"
      }
    }
  }
  ,
    {
      "name": "paw-1",
      "type": "Microsoft.Compute/virtualMachines",
      "apiVersion": "2016-04-30-preview",
      "location": "[parameters('region')]",
      "dependsOn": [
        "[concat('Microsoft.Network/networkInterfaces/', 'paw-1-nic')]",
        "[concat('Microsoft.Storage/storageAccounts/', variables('diagStorageAccountName'))]"
      ],
      "properties": {
        "osProfile": {
          "computerName": "paw-1",
          "adminUsername": "[parameters('adminUsername')]",
          "adminPassword": "[parameters('adminPassword')]",
          "windowsConfiguration": {
            "provisionVmAgent": "true"
          }
        },
        "hardwareProfile": {
          "vmSize": "[parameters('vmSize')]"
        },
        "storageProfile": {
          "imageReference": {
            "publisher": "microsoftvisualstudio",
            "offer": "visualstudio2019latest",
            "sku": "vs-2019-comm-latest-ws2019",
            "version": "latest"
        },
          "osDisk": {
            "createOption": "FromImage",
            "managedDisk": {
              "storageAccountType": "Standard_LRS"
            }
          },
          "dataDisks": [ ]
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces', 'paw-1-nic')]"
            }
          ]
        },
        "diagnosticsProfile": {
          "bootDiagnostics": {
            "enabled": true,
            "storageUri": "[reference(resourceId(resourceGroup().name, 'Microsoft.Storage/storageAccounts', variables('diagStorageAccountName')), '2015-06-15').primaryEndpoints['blob']]"
          }
        }
      }
    },
    {
      "name": "paw-1-nic",
      "type": "Microsoft.Network/networkInterfaces",
      "apiVersion": "2016-09-01",
      "location": "[parameters('region')]",
      "dependsOn": [
        "[concat('Microsoft.Network/publicIpAddresses/', 'paw-1-ip')]",
        "[concat('Microsoft.Network/virtualNetworks/', 'mainVNet')]",
        "[concat('Microsoft.Network/networkSecurityGroups/', 'paw-1-nsg')]"
      ],
      "properties": {
        "ipConfigurations": [
          {
            "name": "ipconfig1",
            "properties": {
              "subnet": {
                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', 'mainVNet', 'default')]"
              },
              "privateIPAllocationMethod": "Dynamic",
              "publicIpAddress": {
                "id": "[resourceId(resourceGroup().name,'Microsoft.Network/publicIpAddresses', 'paw-1-ip')]"
              }
            }
          }
        ],
        "networkSecurityGroup": {
          "id": "[resourceId(resourceGroup().name, 'Microsoft.Network/networkSecurityGroups', 'paw-1-nsg')]"
        }
      }
    },
    {
      "name": "paw-1-ip",
      "type": "Microsoft.Network/publicIPAddresses",
      "apiVersion": "2017-08-01",
      "location": "[parameters('region')]",
      "properties": {
        "publicIPAddressVersion": "IPv4",
        "publicIPAllocationMethod": "Dynamic"
      }
    },
    {
      "name": "db-1",
      "type": "Microsoft.Compute/virtualMachines",
      "apiVersion": "2016-04-30-preview",
      "location": "[parameters('region')]",
      "dependsOn": [
        "[concat('Microsoft.Network/networkInterfaces/', 'db-1-nic')]",
        "[concat('Microsoft.Storage/storageAccounts/', variables('diagStorageAccountName'))]"
      ],
      "properties": {
        "osProfile": {
          "computerName": "db-1",
          "adminUsername": "[parameters('adminUsername')]",
          "adminPassword": "[parameters('adminPassword')]",
          "windowsConfiguration": {
            "provisionVmAgent": "true"
          }
        },
        "hardwareProfile": {
          "vmSize": "[parameters('vmSize')]"
        },
        "storageProfile": {
          "imageReference": {
            "publisher": "MicrosoftSQLServer",
            "offer": "SQL2016SP1-WS2016",
            "sku": "Enterprise",
            "version": "latest"
          },
          "osDisk": {
            "createOption": "FromImage",
            "managedDisk": {
              "storageAccountType": "Standard_LRS"
            }
          },
          "dataDisks": [ ]
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces', 'db-1-nic')]"
            }
          ]
        },
        "diagnosticsProfile": {
          "bootDiagnostics": {
            "enabled": true,
            "storageUri": "[reference(resourceId(resourceGroup().name, 'Microsoft.Storage/storageAccounts', variables('diagStorageAccountName')), '2015-06-15').primaryEndpoints['blob']]"
          }
        }
      }
    },
    {
      "name": "db-1-nic",
      "type": "Microsoft.Network/networkInterfaces",
      "apiVersion": "2016-09-01",
      "location": "[parameters('region')]",
      "dependsOn": [
        "[concat('Microsoft.Network/virtualNetworks/', 'dbVnet')]",
        "[concat('Microsoft.Network/networkSecurityGroups/', 'DbTrafficOnly')]"
      ],
      "properties": {
        "ipConfigurations": [
          {
            "name": "ipconfig1",
            "properties": {
              "subnet": {
                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', 'dbVNet', 'default')]"
              },
              "privateIPAllocationMethod": "Dynamic"
            }
          }
        ],
        "networkSecurityGroup": {
          "id": "[resourceId(resourceGroup().name, 'Microsoft.Network/networkSecurityGroups', 'DbTrafficOnly')]"
        }
      }
    },
    {
      "name": "web-1",
      "type": "Microsoft.Compute/virtualMachines",
      "apiVersion": "2016-04-30-preview",
      "location": "[parameters('region')]",
      "dependsOn": [
        "[concat('Microsoft.Network/networkInterfaces/', 'web-1-nic')]",
        "[concat('Microsoft.Storage/storageAccounts/', variables('diagStorageAccountName'))]"
      ],
      "properties": {
        "osProfile": {
          "computerName": "web-1",
          "adminUsername": "[parameters('adminUsername')]",
          "adminPassword": "[parameters('adminPassword')]",
          "windowsConfiguration": {
            "provisionVmAgent": "true"
          }
        },
        "hardwareProfile": {
          "vmSize": "[parameters('vmSize')]"
        },
        "storageProfile": {
          "imageReference": {
            "publisher": "MicrosoftWindowsServer",
            "offer": "WindowsServer",
            "sku": "2016-Datacenter",
            "version": "latest"
          },
          "osDisk": {
            "createOption": "FromImage",
            "managedDisk": {
              "storageAccountType": "Standard_LRS"
            }
          },
          "dataDisks": [ ]
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces', 'web-1-nic')]"
            }
          ]
        },
        "diagnosticsProfile": {
          "bootDiagnostics": {
            "enabled": true,
            "storageUri": "[reference(resourceId(resourceGroup().name, 'Microsoft.Storage/storageAccounts', variables('diagStorageAccountName')), '2015-06-15').primaryEndpoints['blob']]"
          }
        }
      }
    },
    {
      "name": "web-1-nic",
      "type": "Microsoft.Network/networkInterfaces",
      "apiVersion": "2016-09-01",
      "location": "[parameters('region')]",
      "dependsOn": [
        "[concat('Microsoft.Network/publicIpAddresses/', 'web-1-ip')]",
        "[concat('Microsoft.Network/virtualNetworks/', 'webVNet')]",
        "[concat('Microsoft.Network/networkSecurityGroups/', 'WebTrafficOnly')]"
      ],
      "properties": {
        "ipConfigurations": [
          {
            "name": "ipconfig1",
            "properties": {
              "subnet": {
                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', 'webVNet', 'default')]"
              },
              "privateIPAllocationMethod": "Dynamic",
              "publicIpAddress": {
                "id": "[resourceId(resourceGroup().name,'Microsoft.Network/publicIpAddresses', 'web-1-ip')]"
              }
            }
          }
        ],
        "networkSecurityGroup": {
          "id": "[resourceId(resourceGroup().name, 'Microsoft.Network/networkSecurityGroups', 'WebTrafficOnly')]"
        }
      }
    },
    {
      "name": "web-1-ip",
      "type": "Microsoft.Network/publicIpAddresses",
      "apiVersion": "2017-08-01",
      "location": "[parameters('region')]",
      "properties": {
        "publicIPAddressVersion": "IPv4",
        "publicIpAllocationMethod": "Dynamic"
      }
    },
    {
      "type": "Microsoft.Compute/virtualMachines/extensions",
      "name": "[concat('web-1','/', 'dscExtension')]",
      "apiVersion": "2015-05-01-preview",
      "location": "[parameters('region')]",
      "dependsOn": [
        "[concat('Microsoft.Compute/virtualMachines/', 'web-1')]"
      ],
      "properties": {
        "publisher": "Microsoft.Powershell",
        "type": "DSC",
        "typeHandlerVersion": "2.19",
        "autoUpgradeMinorVersion": true,
        "settings": {
          "ModulesUrl": "https://github.com/Microsoft/MCW-Azure-security-privacy-and-compliance/blob/master/Hands-on%20lab/Scripts/Install_IIS.zip?raw=true",
          "ConfigurationFunction": "Install_IIS.ps1\\InstallIIS",
          "Properties": {
            "MachineName": "web-1"
          }
        },
        "protectedSettings": null
      }
    },
    {
      "type": "Microsoft.Compute/virtualMachines/extensions",
      "name": "[concat('db-1','/', 'csExtension')]",
      "apiVersion": "2018-10-01",
      "location": "[parameters('region')]",
      "dependsOn": [
        "[concat('Microsoft.Compute/virtualMachines/', 'db-1')]"
      ],
      "properties": {
        "publisher": "Microsoft.Compute",
        "type": "CustomScriptExtension",
        "typeHandlerVersion": "1.7",
        "autoUpgradeMinorVersion": true,
        "settings": {
          "fileUris" : [
            "https://raw.githubusercontent.com/givenscj/MCW-Security-baseline-on-Azure/master/Hands-on%20lab/Scripts/Set_FirewallRule/Set_FirewallRule.ps1"
          ],
          "commandToExecute" : "powershell.exe -ExecutionPolicy bypass -File Set_FirewallRule.ps1"
        },
        "protectedSettings": null
      }
    },
    {
      "type": "Microsoft.KeyVault/vaults",
      "name": "[concat('kv', uniqueString(resourceGroup().id))]",
      "apiVersion": "2015-06-01",
      "location": "[parameters('region')]",
      "properties": {
        "sku": {
          "family": "A",
          "name": "Standard"
        },
        "tenantId": "[subscription().tenantId]",
        "accessPolicies": [
          {
            "tenantId": "[subscription().tenantId]",
            "objectId": "[parameters('userObjectId')]",
            "permissions": {
              "keys": [
                "All"
              ],
              "secrets": [
                "All"
              ],
              "certificates": [
                "All"
              ]
            }
          }
        ],
        "enabledForDeployment": false
      },
      "dependsOn": [ ]
    }
  ],
  "outputs": {
    "adminUsername": {
      "type": "string",
      "value": "[parameters('adminUsername')]"
    },
    "adminPassword": {
      "type": "string",
      "value": "[parameters('adminPassword')]"
    },
    "jumpVMDns": {
      "type": "string",
      "value": "[reference(resourceId('Microsoft.Network/publicIPAddresses',variables('publicIpAddressName'))).dnsSettings.fqdn]"
    }
  }
}
